2006-05-03  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdmconfig.h: Remove gdm_config_init from header since it
	  is a static function in the c file.

2006-05-02  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.15.0:
        * NEWS: Updated.
	* gui/gdmlogin.c:  Now use "Start Over" instead of Cancel.

2006-05-02  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.14.5:
        * NEWS: Updated.

2006-05-02  Brian Cameron  <brian.cameron@sun.com>

	* config/gdm.conf-custom: Added comment before [servers] section
	  to address bug #340333.  

2006-05-01  Julio M. Merino Vidal  <jmmv@NetBSD.org>

	* daemon/slave.c: Explicitly adjust the effective GID before
	  running the child session program.  Otherwise it remains with
	  high privileges.  The problem was exposed under NetBSD.
	  Fixes bug #340347.

2006-05-01  Brian Cameron  <brian.cameron@sun.com>

	* config/gettextfoo.h, config/XKeepsCrashing:  Updated by running
	  'cd config && cat XKeepsCrashing Xsession.in|./extract-shell.sh
          > gettextfoo.h', so the file is regenerated to have the latest
	  strings.  Fixes bug #340017.

2006-04-27  Brian Cameron  <brian.cameron@sun.com>

	* docs/C/gdm.xml: Updated to add new "Using gdmsetup" section
	  and other corrections.
	* config/gdm.conf.in: Updated documentation.

2006-04-26  Brian Cameron  <brian.cameron@sun.com>

	* daemon/verify-pam.c:  Fix pam stack so that for autologin the
	  GDM PAM stack is "GDM_KEY_PAM_STACK-autogen" so it works like
	  before.

2006-04-26  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter_item_pam.c: Add pam-error-logo item type.
	* gui/greeter/greeter_item.h, gui/greeter/greeter_canvas_item.c,
	  gui/greeter/greeter_geometry, gui/greeter/greeter_parser.c: Add item
	  type button to use a real GTK+ button, this better supports
	  accessibility.  Add "startover" string to stock, this better name
	  for the "Cancel" button was recommended.
	* gui/greeter/themes/happygnome/happygnome.xml,