@@ -1,3 +1,8 @@
+2006-05-04  Brian Cameron  <brian.cameron@sun.com>
+
+	* gui/greeter/greeter_parser.c: Remove double-free.  Fixes bug
+	  #340668.  Patch provided by Joe Marcus Clark <marcus@freebsd.org>.
+
 2006-05-03  Brian Cameron  <brian.cameron@sun.com>
 
 	* daemon/gdmconfig.h: Remove gdm_config_init from header since it
